--- a/ui/ui_convert.ui
+++ b/ui/ui_convert.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>180</width>
+    <width>226</width>
     <height>111</height>
    </rect>
   </property>
@@ -17,11 +17,14 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QProgressBar" name="progressBar_convert">
+      <property name="maximum">
+       <number>0</number>
+      </property>
       <property name="value">
-       <number>30</number>
+       <number>-1</number>
       </property>
       <property name="textVisible">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -32,9 +35,9 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_Stop">
+     <widget class="QPushButton" name="pushButton_stop">
       <property name="text">
-       <string>Stop</string>
+       <string>STOP</string>
       </property>
      </widget>
     </item>
@@ -45,7 +48,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>180</width>
+     <width>226</width>
      <height>21</height>
     </rect>
    </property>
