bugfix and update new code

--- a/ui/ui_onnx2engine.ui
+++ b/ui/ui_onnx2engine.ui
@@ -146,6 +146,9 @@
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
           <widget class="QSlider" name="horizontalSlider_workspace">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="minimum">
             <number>1</number>
            </property>
